frontend/deployments/deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: team-projekt-kkk-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team-projekt-kkk-frontend
  template:
    metadata:
      labels:
        app: team-projekt-kkk-frontend
    spec:
      containers:
        - name: frontend
          image: underwoodsteam/dev-frontend:latest
          ports:
            - containerPort: 3000
